tests/ui/binop/box-arithmetic-14915.stderr
error[E0369]: cannot add `{integer}` to `Box<isize>`
  --> $DIR/box-arithmetic-14915.rs:6:22
   |
LL |     println!("{}", x + 1);
   |                    - ^ - {integer}
   |                    |
   |                    Box<isize>
   |
note: `Box<isize>` does not implement `Add<{integer}>`
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL
  ::: $SRC_DIR/alloc/src/boxed.rs:LL:COL
   |
   = note: `Box<isize>` is defined in another crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0369`.
